libs/extractor/tests/snapshots/snapshots/extractor__tests__vanilla_extract_font_face.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"fonts.css.ts\",\nr#\"import { fontFace, style } from '@devup-ui/react'\nconst myFont = fontFace({\n  src: 'local(\"Comic Sans MS\")'\n})\nexport const text = style({\n  fontFamily: myFont\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "font-family",
                value: "__devup_font_0_0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        FontFace(
            ExtractFontFace {
                file: "fonts.css.ts",
                properties: {
                    "font-family": "__devup_font_0_0",
                    "src": "local(\"Comic Sans MS\")",
                },
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const text = \"a\";\n;\nconst myFont = \"__devup_font_0_0\";\n",
}
