libs/extractor/tests/snapshots/snapshots/extractor__tests__vanilla_extract_selectors.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"selectors.css.ts\",\nr#\"import { style } from '@devup-ui/react'\nexport const button = style({\n  background: 'blue',\n  selectors: {\n    '&:hover': {\n      background: 'darkblue'\n    },\n    '&:focus': {\n      outline: '2px solid blue'\n    },\n    '&:active': {\n      transform: 'scale(0.98)'\n    },\n    '&:disabled': {\n      opacity: 0.5,\n      cursor: 'not-allowed'\n    }\n  }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "darkblue",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "cursor",
                value: "not-allowed",
                level: 0,
                selector: Some(
                    Selector(
                        "&:disabled",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "opacity",
                value: ".5",
                level: 0,
                selector: Some(
                    Selector(
                        "&:disabled",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "outline",
                value: "2px solid blue",
                level: 0,
                selector: Some(
                    Selector(
                        "&:focus",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "transform",
                value: "scale(.98)",
                level: 0,
                selector: Some(
                    Selector(
                        "&:active",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const button = \"a b c d e f\";\n",
}
